@@ -17,3 +17,4 @@ depth: 1
 ### Bug fixes
 
  * Add back rendering of `help_text` for InlinePanel (Matt Westcott)
+ * Ensure that `AbstractForm` & `AbstractEmailForm` page models correctly pass the form to the preview context (Dan Bentley)
